--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,23 +1,32 @@
-<main>
-  <div class="container">
-  <div class="row" >
-  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
- 
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
 
-  <p>Title</p>
-  <%= f.text_field :title %>
-  
-  <p>Opinion</p>
-  <%= f.text_area :body %><br>
-  
-  <%= f.submit 'Update Book' %><br>
-  <%= link_to 'Show',book_path(@book.id) %> 
-  | 
-  <%= link_to 'Back', books_path(@book.id)%>
-<% end %>
-</div>
-</div>
-</div>
+<% if @book.errors.any? %>
+ <%= @book.errors.count %>errors prohibited this obj from being saved:
+ <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+ </ul>
+ <%end%>
+ <main>
+  <div class="container">
+   <div class="row" >
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+ 
+     <h1>Editing Book</h1>
+     <%= form_with model: @book do |f| %>
+
+      <p>Title</p>
+      <%= f.text_field :title %>
+      
+      <p>Opinion</p>
+      <%= f.text_area :body %><br>
+      
+      <%= f.submit 'Update Book' %><br>
+      <%= link_to 'Show',book_path(@book.id) %> 
+      | 
+      <%= link_to 'Back', books_path %>
+      <% end %>
+      </div>
+    </div>
+  </div>
 </main>
