--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <main>
-<%= render 'books/list', user: @user,  book: @book_new %>
+<%= render 'books/list', user: @user,  book: @book %>
       <div class='col-md-8 offset-md-1'>
         <h2>Users</h2>
         <table class='table table-hover table-inverse'>
