--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
         <table class='table table-hover table-inverse'>
           <tbody>
             <tr>
-            <th><%= image_tag @user.get_profile_image(100,100) %></th>
+            <th><%= image_tag @user.get_profile_image(100,100) %>
             <br><%= link_to @user.name,user_path(@user.id) %></th> 
               <td><span><%= link_to @book.title,book_path(@book.id) %></span></td>
               <td><span><%= @book.body %></span></td>
@@ -14,7 +14,43 @@
               <td><% if @book.user == current_user %>
               <%= link_to "Destroy", destroy_book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
               <% end %></td>
+              <td>
+                <% if @book.favorited_by?(current_user) %>
+                  <p>
+                    <%= link_to book_favorite_path(@book.id), method: :delete do %>
+                      ♥<%= @book.favorites.count %> 
+                    <% end %>
+                  </p>
+                  <% else %>
+                  <p>
+                    <%= link_to book_favorite_path(@book.id), method: :post do %>
+                      ♡<%= @book.favorites.count %> 
+                    <% end %>
+                  </p>
+                <% end %>
+              </td>
+              <td>コメント件数：<%= @book.book_comments.count %></td>
+              </tr>
+            <tr>
+             <td>
+                <% @book.book_comments.each do |book_comment| %>
+                    <%= image_tag book_comment.user.get_profile_image(100,100) %>
+                    <%= book_comment.comment %>
+                    <% if book_comment.user == current_user %>
+                    <%= link_to "destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+                    <% end %>
+                    <p><%= book_comment.user.name %></p> 
+                <% end %>
+              </td>
             </tr>
+            <tr>
+             <td>
+                <%= form_with model: [@book, @book_comment] do |f| %>
+                  <%= f.text_area :comment, rows: '5', placeholder: "", class: "textarea-full-width" %><br>
+                  <%= f.submit "送信" %>
+                <% end %>
+             </td>
+           </tr>
           </tbody>
         </table>
       </div>
