--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -23,6 +23,33 @@
             <th>introduction</th>
             <th><%= user.introduction %></th>  
           </tr>
+          <tr>
+            <th>フォロー数</th> 
+            <td>
+              <%= link_to follows_user_path(user) do %>
+                <%= user.followers.count %>
+              <% end %> 
+            </td>
+          </tr>
+          <tr>
+            <th>フォロワー数</th>
+            <td>
+              <%= link_to followers_user_path(user) do %>
+                <%= user.followeds.count %>
+              <% end %> 
+            </td>
+          </tr>
+          <tr>
+            <th>
+              <% if current_user != user %>
+                <% if current_user.following?(user) %>
+                  <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+                <% else %>
+                  <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+                <% end %>
+              <% end %>
+            </th>
+          </tr>
         </table>　
         <div class='row'>
           <a class="btn btn-outline-secondary btn-block" href="<%= edit_user_path(user) %>">
