--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,18 @@
             <tr>
             <th> <%= image_tag book.user.get_profile_image(100,100) %></th> 
               <td><%= book.user.name %></td>
-               <td><%= link_to 'Show', user_path(book.user) %></td>
+              <td>フォロー数<%=  book.user.followers.count %></td>
+              <td>フォロワー数<%= book.user.followeds.count %></td>
+              <td>
+                  <% if current_user != book.user %>
+                  <% if current_user.following?(book.user) %>
+                     <%= link_to "フォロー外す", user_relationships_path(book.user.id), method: :delete %>
+                  <% else %>
+                    <%= link_to "フォローする", user_relationships_path(book.user.id), method: :post %>
+                  <% end %>
+                <% end %>
+              </td>
+              <td><%= link_to 'Show', user_path(book.user) %></td>
             <% end %>
             </tr>
           </tbody>
