”応用課題５終了”

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <%= render partial: 'layouts/search' if logged_in? %>
     <%= yield %>
     <%= render 'layouts/footer'  %>
   </body>
