--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,11 +1,11 @@
 <% if book.errors.any? %>
- <%= book.errors.count %>errors prohibited this obj from being saved:
- <ul>
-   <% book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
+  <%= book.errors.count %> errors prohibited this obj from being saved:
+  <ul>
+    <% book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
     <% end %>
- </ul>
- <%end%>
+  </ul>
+<% end %>
 <p id="notice"><%= flash[:notice] %></p>
   <div class='container px-5 px-sm-0'>
     <div class='row'>
@@ -43,14 +43,28 @@
             <th>
               <% if current_user != user %>
                 <% if current_user.following?(user) %>
-                  <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+                  <%= link_to "フォロー外す", user_relationships_path(user.id), class: "btn btn-primary", method: :delete %>
                 <% else %>
-                  <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+                  <%= link_to "フォローする", user_relationships_path(user.id), class: "btn btn-primary", method: :post %>
+                <% end %>
+            </th>
+            <td>
+              <% if (current_user.following?(user)) && (user.following?(current_user)) %>
+                <% if @isRoom == true %>
+                  <%= link_to "chatを始める", room_path(@roomId) %>
+                <% else %>
+                  <%= form_for @room do |f| %>
+                    <%= fields_for @entry do |e| %>
+                      <%= e.hidden_field :user_id, value: @user.id %>
+                    <% end %>
+                    <%= f.submit "チャットを始める", class: "btn btn-primary user-show-chat" %>
+                  <% end %>
                 <% end %>
               <% end %>
-            </th>
-          </tr>
-        </table>　
+             <% end %>
+           </td>
+         </tr>
+        </table>
         <div class='row'>
           <a class="btn btn-outline-secondary btn-block" href="<%= edit_user_path(user) %>">
             <i class="fas fa-user-cog"></i>
@@ -64,4 +78,5 @@
         <%= f.text_area :body %>
         <%= f.submit 'Create Book' %>
         <% end %>
-      </div>
+     </div> 
+   
