--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,6 +30,7 @@
                 <% end %>
               </td>
               <td>コメント件数：<%= @book.book_comments.count %></td>
+              <td>閲覧数:<%= @book_detail.view_counts.count %></td>
               </tr>
             <tr>
              <td>
