--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
 <%= render 'books/list', user: @user,  book: @book %>
       <div class='col-md-8 offset-md-1'>
         <h2>Users</h2>
+        <%= link_to "グループを作成する", new_group_path %>｜<%= link_to "グループ一覧", groups_path %>
         <table class='table table-hover table-inverse'>
           <thead>
             <tr>
@@ -11,26 +12,26 @@
               <th colspan="3"></th>
             </tr>
           </thead>
-           <% @books.each do |book| %>
           <tbody>
+           <% @users.each do |user| %>
             <tr>
-            <th> <%= image_tag book.user.get_profile_image(100,100) %></th> 
-              <td><%= book.user.name %></td>
-              <td>フォロー数<%=  book.user.followers.count %></td>
-              <td>フォロワー数<%= book.user.followeds.count %></td>
+            <th> <%= image_tag user.get_profile_image(100,100) %></th> 
+              <td><%= user.name %></td>
+              <td>フォロー数<%= user.followers.count %></td>
+              <td>フォロワー数<%= user.followeds.count %></td>
               <td>
-                  <% if current_user != book.user %>
-                  <% if current_user.following?(book.user) %>
-                     <%= link_to "フォロー外す", user_relationships_path(book.user.id), method: :delete %>
+                  <% if current_user != user %>
+                  <% if current_user.following?(user) %>
+                     <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
                   <% else %>
-                    <%= link_to "フォローする", user_relationships_path(book.user.id), method: :post %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
                   <% end %>
                 <% end %>
               </td>
-              <td><%= link_to 'Show', user_path(book.user) %></td>
-            <% end %>
+              <td><%= link_to 'Show', user_path(user) %></td>
             </tr>
-          </tbody>
-        </table>
-      </div>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
 </main>
