--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,8 +4,10 @@
        <table class='table table-hover table-inverse'>
           <thead>
             <tr>
-              <th>image</th>
-              <th>name</th>
+              <th></th>
+              <th>グループ名</th>
+              <th>紹介文</th>
+              <th>メンバー</th>
               <th></th>
               <th colspan="3"></th>
             </tr>
@@ -15,6 +17,8 @@
               <tr>
                 <td><%= image_tag group.get_group_image, size: "50x50" %></td>
                 <td><%= link_to group.name, group_path(group) %></td>
+                <td><%= group.introduction %></td>
+                <td><%= group.users.count %></td>
                 <% if group.is_owned_by?(current_user) %>
                   <td><%= link_to "Edit", edit_group_path(group), class: "btn btn-success group_#{group.id}" %></td>
                 <% end %>
